--- a/CC-Energy.csproj
+++ b/CC-Energy.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<RootNamespace>BaseMod</RootNamespace>
-		<Version>0.2.0</Version>
+		<RootNamespace>CCEnergy</RootNamespace>
+		<Version>0.1.0</Version>
 		<IncludedModProjectPaths>i18n;assets</IncludedModProjectPaths>
 
 		<TargetFramework>net8.0</TargetFramework>
@@ -22,11 +22,9 @@
 		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Actions\" />
 	  <Folder Include="Artifacts\" />
 	  <Folder Include="assets\Animation\" />
 	  <Folder Include="assets\Artifact\" />
-	  <Folder Include="Cards\" />
 	  <Folder Include="Features\" />
 	</ItemGroup>
 </Project>
